# biblestudytools

./: .gitignore  LICENSE  README.md  pyproject.toml
biblestudytools/: __main__.bak  __main__.py  algorithm.py  bible.py  book.py  cache.py  color.py  conf.py  getch.py  http.py  system.py  translation.py  ui.py
